--- a/WebWork.ipynb
+++ b/WebWork.ipynb
@@ -121,6 +121,58 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<h1><div id=\"talk-subtitle\">Exemple de cours avec Webwork (accès libre)</div></h1>\n",
+    "\n",
+    "-  <i class=\"icon-github\"> <a href=\"http://nbviewer.jupyter.org/github/mbuffat/WebWork/blob/master/WebWork.ipynb\">version interactive sur github/mbuffat</a></i>\n",
+    "\n",
+    "-  <a href=\"http://ufrmeca.univ-lyon1.fr/moodle\">http://ufrmeca.univ-lyon1.fr/moodle/course/view.php?id=112</a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"500\"\n",
+       "            src=\"http://ufrmeca.univ-lyon1.fr/moodle/course/view.php?id=112\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f317e79d150>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"http://ufrmeca.univ-lyon1.fr/moodle/course/view.php?id=112\",width=\"100%\",height=\"500\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -346,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -368,10 +420,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd0018910d0>"
+       "<IPython.lib.display.IFrame at 0x7f317e79d110>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -416,10 +468,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd0018912d0>"
+       "<IPython.lib.display.IFrame at 0x7f317e789e50>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
